--- a/IOS/Base.lproj/Main.storyboard
+++ b/IOS/Base.lproj/Main.storyboard
@@ -22,14 +22,34 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hTC-Qu-cYl">
-                                <rect key="frame" x="147" y="708" width="108" height="58"/>
+                                <rect key="frame" x="118" y="667" width="178" height="104"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <accessibility key="accessibilityConfiguration" label="Launch"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="47"/>
                                 <state key="normal" title="Launch"/>
                                 <connections>
                                     <segue destination="BYZ-38-t0r" kind="show" id="PWS-BA-tI8"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="MSAA:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q6I-wb-jo7">
+                                <rect key="frame" x="75" y="391" width="85" height="22"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bordered" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="DYF-fj-Cu1">
+                                <rect key="frame" x="173" y="385" width="104" height="32"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <segments>
+                                    <segment title="1x"/>
+                                    <segment title="2x"/>
+                                    <segment title="4x"/>
+                                </segments>
+                                <connections>
+                                    <action selector="onChanged:" destination="2YN-aA-1FA" eventType="valueChanged" id="GU9-0b-nWr"/>
+                                </connections>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                     </view>
@@ -72,7 +92,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="IiB-hS-iUt" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" hidden="YES" opaque="NO" contentMode="scaleToFill" id="fUO-SM-NhE">
+                    <navigationBar key="navigationBar" hidden="YES" contentMode="scaleToFill" id="fUO-SM-NhE">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
